--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+package-lock.json
+.package.json.swp
+
+node_modules/
+
 # Logs
 logs
 *.log
@@ -5,6 +10,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+package.json.swp
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
