--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iluvanime",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Anime fan site",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "nodemon": "^2.0.7"
   }
 }
